--- a/big-market-trigger/pom.xml
+++ b/big-market-trigger/pom.xml
@@ -30,7 +30,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>cn.bugstack.middleware</groupId>
+            <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- 系统模块 -->
         <dependency>
