--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,19 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.30</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.smallbun.screw</groupId>
+                <artifactId>screw-core</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
